src/styles/spms_base.css
*{ margin: 0; padding: 0; }
.container{ width: 960px; margin: auto; margin-top: 60px; padding: 0.5em}
.container.headContents { background: #0000EF; opacity: 1; color: #FFFFFF; padding: 0.5em 1em, 0.5em 1em;}
.fleft{float: left;}
.fright{float: right;}
.clear{clear: both;}
h3{ font-size: 18px; }
h4{ font-size: 14px; }
.addNew {padding: 2px 9px}
.center {margin:auto; width: 40%; border: 1px solid #bbbbdd; padding: 10px;}
.middle {margin-top: 10%}
.ttable{display: table; table-layout:fixed; padding:3px}
.tbrow{display: table-row;}
.tbrow.head{background-color: #dddddd;}
.tbcell{display: table-cell; padding: 5px; border: none;}
.solbox{border: 1px solid;}
.tbcell.colspan {display: none; }
.tbbody{display: table-row-group;}
.tbhead{display: table-header-group; backgroud-color: #dddddd; padding: 5px;}
.topalign{vertical-align: top;}
.midalign{vertical-align: middle;}
.botalign{vertical-align: bottom;}
.signin {margin-bottom: 0.5em; margin-top: 1em; padding: 5px 5px 5px 5px;}
.gray {background-color:#dddddd;}
.noneB { border: none; }
table { border-collapse: collapse; border: solid thin; }
colgroup, tbody { border: solid thin; }
td { border: solid thin; height: 1.4em; text-align: left; padding: 0; }

.modal{ position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0, 0.4); }
.modalContainer { width: 555px; background: #FFFFFF; margin: auto; margin-top: 44px; }

.modalHeading { padding: 9px; background: #36367C; color: #FFFFFF; }
.modalContent { min-height: 333px; padding: 44px; }

.addNew { padding: 2px 9px; }

.close { background: #D73131; padding: 3px 9px; border: none; color: #FFFFFF}

p.successMessage {
background: #D8EFC2;
color: #097133;
border-left: 5px solid #097133;
padding: 9px;
margin: 22px 0;
}
p.errorMessage {
background: #EFCBC2;
color: #D71517;
border-left: 5px solid #DA1527;
padding: 9px;
margin: 22px 0;
}

.loginBtn {
	width: 40%;
	margin: 1em 2em;
	padding: 5px 5px 5px 5px;
}

input {
	border:none;
}
input[type="text"] {
	background-color: aliceblue;
}
input[type="password"] {
	background-color: aliceblue;
}

